# local-middleware-tool

./: .gitignore  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
data/: model-pricing.json
scripts/: build-gateway-sidecar.mjs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/gateway/: config.rs  http.rs  mod.rs  paths.rs  pricing.rs  router.rs  state.rs
src/components/dashboard/: ConfirmActionDialog.tsx  EventTimeline.tsx  NumberField.tsx  ProviderEditor.tsx  RouteFlow.tsx  UsageTable.tsx  common.tsx
src/gateway/: config.ts  paths.ts  pricing.ts  router.ts  server.ts  state.ts
src/lib/: api.ts  format.ts  responses.ts
src/views/: LogsView.tsx  OverviewView.tsx  PricingView.tsx  ProvidersView.tsx  RulesView.tsx  SettingsView.tsx  TestView.tsx
tests/: fenno-smoke.ts  router-failover.ts
