[package]
name = "aigate"
version = "0.1.0"
description = "Local OpenAI-compatible gateway desktop shell"
authors = ["AIGate"]
edition = "2021"
default-run = "aigate"

[lib]
name = "aigate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aigate-gateway"
path = "src/bin/aigate-gateway.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
glob = "0.3"
nanoid = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
